website/versioned_docs/version-4.0.0-rc.2/components/SearchBar.mdx
---
id: searchbar
title: SearchBar
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import {} from "react-native-elements";
import Usage from "../component_usage/SearchBar.mdx";

## Usage

<Usage />

## Props

:::note
Includes all [Input](input#props) props.
:::

<div class='table-responsive'>

| Name                      | Type                            | Default              | Description |
| ------------------------- | ------------------------------- | -------------------- | ----------- |
| `cancelButtonProps`       | Text Style                      |                      |             |
| `cancelButtonTitle`       | string                          |                      |             |
| `cancelIcon`              | IconNode                        |                      |             |
| `clearIcon`               | IconNode                        |                      |             |
| `containerStyle`          | View Style                      |                      |             |
| `inputContainerStyle`     | View Style                      |                      |             |
| `inputStyle`              | Text Style                      |                      |             |
| `leftIconContainerStyle`  | View Style                      |                      |             |
| `lightTheme`              | boolean                         |                      |             |
| `loadingProps`            | ActivityIndicatorProps          |                      |             |
| `onCancel`                | `(() => any)` or `(() => any)`  |                      |             |
| `onClear`                 | Function                        |                      |             |
| `platform`                | `default` or `android` or `ios` | `'default' as const` |             |
| `rightIconContainerStyle` | View Style                      |                      |             |
| `round`                   | boolean                         |                      |             |
| `searchIcon`              | IconNode                        |                      |             |
| `omitCancel`              | boolean                         |                      |             |
| `showCancel`              | boolean                         |                      |             |
| `showLoading`             | boolean                         |                      |             |

</div>
